--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.ssl.key-store-password=ontario123
 server.ssl.key-alias=studentapi
 spring.application.name=studentapi
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
-spring.datasource.username=system
-spring.datasource.password=1234
+spring.datasource.username=your username
+spring.datasource.password=your password
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
