--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8443
 server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=ontario123
+server.ssl.key-store-password=your password
 server.ssl.key-alias=studentapi
 spring.application.name=studentapi
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
